--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IL TEMPO DEL SILENZIO DI UF</title>
+    <title>UF Silence</title>
     <link rel="stylesheet" href="style.css">
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="img/114x114-uf_icon.png" />
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="img/144x144-uf_icon.png" />
