icon: ios10 and retina support added

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="style.css">
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="img/114x114-uf_icon.png" />
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="img/144x144-uf_icon.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="img/152x152-uf_icon.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="180x180" href="img/180x180-uf_icon.png" />
 </head>
 
 <body>
