--- a/index.html
+++ b/index.html
@@ -1,77 +1,55 @@
 <!DOCTYPE html>
 <html lang="it">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Lobster"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Lato"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Sacramento&display=swap"
-    />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sacramento&display=swap" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>UF Silence</title>
     <link rel="stylesheet" href="style.css" />
-    <link
-      rel="apple-touch-icon-precomposed"
-      sizes="114x114"
-      href="img/icons/114x114-uf_icon.png"
-    />
-    <link
-      rel="apple-touch-icon-precomposed"
-      sizes="144x144"
-      href="img/icons/144x144-uf_icon.png"
-    />
-    <link
-      rel="apple-touch-icon-precomposed"
-      sizes="152x152"
-      href="img/icons/152x152-uf_icon.png"
-    />
-    <link
-      rel="apple-touch-icon-precomposed"
-      sizes="180x180"
-      href="img/icons/180x180-uf_icon.png"
-    />
-  </head>
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="img/icons/114x114-uf_icon.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="img/icons/144x144-uf_icon.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="img/icons/152x152-uf_icon.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="180x180" href="img/icons/180x180-uf_icon.png" />
+</head>
 
-  <body>
-    <div clss="background-container">
-        <div class="clouds"></div>
-      <div class="stars">
-          <div class="title">
+<body>
+    <div class="background-container">
+        <div class="title">
+            <div class="stars">
+                <div class="clouds"></div>
             <div>
-              <h1>Periodaccio!</h1>
+                <h1>Periodaccio!</h1>
             </div>
             <div class="uf">
-              <p id="timeTitle"></p>
+                <p id="timeTitle"></p>
             </div>
             <div id="divtimer">
-              <div>
-                <span class="days"></span>
-                <div class="smalltext">Giorni</div>
-              </div>
-              <div>
-                <span class="hours"></span>
-                <div class="smalltext">Ore</div>
-              </div>
-              <div>
-                <span class="minutes"></span>
-                <div class="smalltext">Minuti</div>
-              </div>
-              <div>
-                <span class="seconds"></span>
-                <div class="smalltext">Secondi</div>
-              </div>
+                <div>
+                    <span class="days"></span>
+                    <div class="smalltext">Giorni</div>
+                </div>
+                <div>
+                    <span class="hours"></span>
+                    <div class="smalltext">Ore</div>
+                </div>
+                <div>
+                    <span class="minutes"></span>
+                    <div class="smalltext">Minuti</div>
+                </div>
+                <div>
+                    <span class="seconds"></span>
+                    <div class="smalltext">Secondi</div>
+                </div>
             </div>
-          </div>
         </div>
     </div>
+    </div>
+
     <script type="text/javascript" src="timer.js"></script>
-  </body>
+</body>
+
 </html>
